feat: added health check endpoint
